gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
#  - name: https
#    port: 443
#    protocol: HTTPS
#    tls:
#      mode: Terminate
#      certificateRefs:
#      - name: default-tls-secret
#        kind: Secret
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
